@@ -1,0 +1,24 @@
+# Copyright 1999-2013 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-haskell/bytestring-show/bytestring-show-0.3.5.5.ebuild,v 1.1 2013/05/11 18:45:01 slyfox Exp $
+
+EAPI=5
+
+# ebuild generated by hackport 0.3.2.9999
+
+CABAL_FEATURES="lib profile haddock hoogle hscolour"
+inherit haskell-cabal
+
+DESCRIPTION="Efficient conversion of values into readable byte strings."
+HOMEPAGE="http://code.haskell.org/~dolio/"
+SRC_URI="mirror://hackage/packages/archive/${PN}/${PV}/${P}.tar.gz"
+
+LICENSE="BSD"
+SLOT="0/${PV}"
+KEYWORDS="~amd64 ~x86"
+IUSE=""
+
+RDEPEND="<dev-haskell/binary-0.8:=[profile?]
+		>=dev-lang/ghc-6.10.4:="
+DEPEND="${RDEPEND}
+		>=dev-haskell/cabal-1.6"
